--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
         with:
           cache: 'npm'
       - run: node ./src/soma.js
-      - run: npm ci   
+      - name: Clear npm cache 
       - run: npm test
       - name: Login to Docker Hub
         uses: docker/login-action@v2
