--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,8 @@ jobs:
         with:
           cache: 'npm'
       - run: node ./src/soma.js
+      - run: npm ci   
+      - run: npm test
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
