ci:insere projectname no sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=andremarinho_ci_node
+sonar.projectName=andremarinho
 sonar.organization=andremarinho
 sonar.sourceEncoding=UTF-8
 sonar.sources=src/**/*.js,src/**/*.jsx,src/**/*.ts,src/**/*.tsx
