--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=andremarinho_ci_node
-sonar.projectName=andremarinho
+sonar.projectName=ci_node
 sonar.organization=andremarinho
 sonar.sourceEncoding=UTF-8
 sonar.sources=src/**/*.js,src/**/*.jsx,src/**/*.ts,src/**/*.tsx
