--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
 sonar.projectKey=andremarinho_ci_node
 sonar.organization=andremarinho
-# sonar.sourceEncoding=UTF-8
-# sonar.sources=src/**/*.js,src/**/*.jsx,src/**/*.ts,src/**/*.tsx
-# sonar.exclusions=**/*.test.js, coverage/**/*, coverage/*
-# sonar.tests=src
-# sonar.test.inclusions=**/*.test.js
-# sonar.javascript.coveragePlugin=lcov
-# sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.sourceEncoding=UTF-8
+sonar.sources=src/**/*.js,src/**/*.jsx,src/**/*.ts,src/**/*.tsx
+sonar.exclusions=**/*.test.js, coverage/**/*, coverage/*
+sonar.tests=src
+sonar.test.inclusions=**/*.test.js
+sonar.javascript.coveragePlugin=lcov
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
