ci:corrige source do properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=andremarinho_ci_node
 sonar.organization=andremarinho
 sonar.sourceEncoding=UTF-8
-sonar.sources=src/**/*.js,src/**/*.jsx,src/**/*.ts,src/**/*.tsx
+sonar.sources=src
 sonar.exclusions=**/*.test.js, coverage/**/*, coverage/*
 sonar.tests=src
 sonar.test.inclusions=**/*.test.js
