ci:insere base dir

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=andremarinho_ci_node
 sonar.organization=andremarinho
 sonar.sourceEncoding=UTF-8
+sonar.projectBaseDir=.
 sonar.sources=src
 sonar.exclusions=**/*.test.js, coverage/**/*, coverage/*
 sonar.tests=src
