--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ jobs:
         with:
           cache: 'npm'
       - run: node ./src/soma.js
+      - run: node ./src/multiplicacao.js
       - run: npm ci   
       - run: npm test
       - name: Login to Docker Hub
