--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.organization=andremarinho
 sonar.sourceEncoding=UTF-8
 sonar.projectBaseDir=.
 sonar.sources=src
-sonar.exclusions=**/*.test.js, coverage/**/*, coverage/*
+sonar.exclusions=**/*.test.js
 sonar.tests=src
 sonar.test.inclusions=**/*.test.js
 sonar.javascript.coveragePlugin=lcov
