--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.sourceEncoding=UTF-8
 sonar.projectBaseDir=.
 sonar.sources=src
 sonar.language=js
-sonar.exclusions=**/*.test.js
+# sonar.exclusions=**/*.test.js
 sonar.tests=src
 sonar.test.inclusions=**/*.test.js
 sonar.javascript.coveragePlugin=lcov
